--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -1,6 +1,6 @@
 <doc-reminder pages="indicators.indicator_usage"></doc-reminder>
 
-<a class="btn btn-primary pull-right" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
+<a class="btn btn-primary pull-right" ng-click="createIndicator()" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
 	<span translate="indicator.create_new"></span>
 </a>
