--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -29,7 +29,7 @@
 				</li>
 
 				<li ng-class="{active: $state.includes('main.project')}" ng-if="userCtx.type == 'partner'">
-					<a ui-sref="main.project.basics">
+					<a ui-sref="main.project.save.basics">
 						<i class="fa fa-fw fa-object-group"></i>
 						<span translate="shared.project"></span>
 					</a>
