--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -1,8 +1,8 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.basics" ng-bind="project.name"></a></li>
-	<li><a ui-sref="main.project.collection_form_list" translate="project.collection_form_list"></a></li>
-	<li class="active">{{form.name}}</li>
+	<li><a ui-sref="main.project.save.basics" ng-bind="project.name"></a></li>
+	<li><a ui-sref="main.project.save.collection_form_list" translate="project.collection_form_list"></a></li>
+	<li class="active">{{project.forms[currentFormIndex].name}}</li>
 </ol>
 
 <doc-reminder pages="project.structure,project.change_definition"></doc-reminder>
@@ -12,17 +12,16 @@
 </div>
 
 <form class="form-horizontal" role="form" name="dataSourceForm" novalidate>
-	
 	<legend translate="project.collection_form_planning"></legend>
-
+	
 	<div class="form-group" show-errors>
 		<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="form.name">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.forms[currentFormIndex].name">
 			<input type="text"
 				   class="form-control"
 				   id="input-name"
 				   name="name"
-				   ng-model="form.name"
+				   ng-model="project.forms[currentFormIndex].name"
 				   placeholder="{{'project.form_name_ph'|translate}}"
 				   required />
 			
@@ -32,8 +31,8 @@
 
 	<div class="form-group">
 		<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.collects.'+form.collect)|translate">
-			<select class="form-control" name="collect" id="collect-input" ng-model="form.collect">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.collects.' + project.forms[currentFormIndex].collect) | translate">
+			<select class="form-control" name="collect" id="collect-input" ng-model="project.forms[currentFormIndex].collect">
 				<option value="some_entity" translate="project.collects.some_entity"></option>
 				<option value="entity" translate="project.collects.entity"></option>
 				<option value="project" translate="project.collects.project"></option>
@@ -41,10 +40,10 @@
 		</div>
 	</div>
 
-	<div class="form-group" ng-if="form.collect == 'some_entity'">
+	<div class="form-group" ng-if="project.forms[currentFormIndex].collect == 'some_entity'">
 		<label for="entities-input" class="col-sm-2 control-label" translate="project.collection_site_list"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="form.entities | getObjects:project.entities | pluck:'name' | join:', '">
-			<ui-select multiple ng-model="form.entities" theme="bootstrap" ui-required="true">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.forms[currentFormIndex].entities | getObjects:project.entities | pluck:'name' | join:', '">
+			<ui-select multiple ng-model="project.forms[currentFormIndex].entities" theme="bootstrap" ui-required="true">
 				<ui-select-match placeholder="">{{$item.name|translate}}</ui-select-match>
 				<ui-select-choices repeat="entity.id as entity in project.entities">
 					{{entity.name|translate}}
@@ -55,8 +54,8 @@
 
 	<div class="form-group">
 		<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.periodicities.'+form.periodicity)|translate">
-			<select class="form-control" name="periodicity" id="periodicity-input" ng-model="form.periodicity">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="('project.periodicities.' + project.forms[currentFormIndex].periodicity) | translate">
+			<select class="form-control" name="periodicity" id="periodicity-input" ng-model="project.forms[currentFormIndex].periodicity">
 				<option value="day" translate="project.periodicities.day"></option>
 				<option value="week" translate="project.periodicities.week"></option>
 				<option value="month" translate="project.periodicities.month"></option>
@@ -67,17 +66,17 @@
 		</div>
 	</div>
 
-	<div class="form-group" ng-if="form.periodicity !== 'free'">
+	<div class="form-group" ng-if="project.forms[currentFormIndex].periodicity !== 'free'">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.start"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(form.start || project.start)|amDateFormat:'YYYY-MM-DD'">
-			<optional-date ng-model="form.start" default="project.start"></optional-date>
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].start || project.start)|amDateFormat:'YYYY-MM-DD'">
+			<optional-date ng-model="project.forms[currentFormIndex].start" default="project.start"></optional-date>
 		</div>
 	</div>
 
-	<div class="form-group" ng-if="form.periodicity !== 'free'">
+	<div class="form-group" ng-if="project.forms[currentFormIndex].periodicity !== 'free'">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(form.end || project.end)|amDateFormat:'YYYY-MM-DD'">
-			<optional-date ng-model="form.end" default="project.end"></optional-date>
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].end || project.end)|amDateFormat:'YYYY-MM-DD'">
+			<optional-date ng-model="project.forms[currentFormIndex].end" default="project.end"></optional-date>
 		</div>
 	</div>
 
@@ -87,15 +86,18 @@
 	<table class="table table-bordered table-condensed table-aggregated-data">
 		<thead>
 			<tr>
-				<th translate="project.variable" style="width: 20%"></th>
-				<th translate="project.aggregation" style="width: 15%" acl-has-project-role="owner"></th>
-				<th translate="project.partitions" style="width: 55%"></th>
-				<th translate="project.actions" style="width: 10%" acl-has-project-role="owner"></th>
+				<th style="width: 30px" acl-has-project-role="owner"></th>
+				<th translate="project.variable"></th>
+				<th translate="project.aggregation" style="width: 140px" acl-has-project-role="owner"></th>
+				<th translate="project.partitions"></th>
+				<th style="width: 30px" acl-has-project-role="owner"></th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody ng-sortable="variableSortOptions" ng-mouseenter="onSortableMouseEvent('variable', true)" ng-mouseleave="onSortableMouseEvent('variable', false)">
 			<!-- variable row -->
-			<tr ng-repeat="element in form.elements track by element.id">
+			<tr ng-repeat="element in project.forms[currentFormIndex].elements track by element.id">
+
+				<td class="handle variable-handle" acl-has-project-role="owner"><i class="fa fa-bars"></i></td>
 
 				<!-- variable name -->
 				<td acl-has-project-role="owner" acl-fallback="element.name">
@@ -104,7 +106,7 @@
 				
 				<!-- variable aggregation -->
 				<td acl-has-project-role="owner">
-					{{'project.different_geos'|translate}}:<br/>
+					{{'project.sites_agg'|translate}}<br/>
 					<select ng-model="element.geoAgg">
 						<option value="none" translate="project.none"></option>
 						<option value="sum" translate="project.sum"></option>
@@ -114,7 +116,7 @@
 						<option value="last" translate="project.last"></option>
 					</select><br/>
 
-					{{'project.same_geos'|translate}}:<br/>
+					{{'project.time_agg'|translate}}<br/>
 					<select ng-model="element.timeAgg">
 						<option value="none" translate="project.none"></option>
 						<option value="sum" translate="project.sum"></option>
@@ -129,26 +131,51 @@
 				<td style="position: relative; padding-bottom: 23px; ">
 					<span translate="project.no_partitions" ng-if="element.partitions.length == 0"></span>
 
-					<ul>
+					<ul ng-sortable="partitionSortOptions"
+					    ng-mouseenter="onSortableMouseEvent('partition', true)"
+					    ng-mouseleave="onSortableMouseEvent('partition', false)">
+
 						<li ng-repeat="partition in element.partitions" style="margin-bottom: 2px">
-							<a class="btn btn-xxs btn-default pull-right" ng-click="moreOptions(element, partition)" acl-has-project-role="owner">
+
+							<a class="btn btn-xxs btn-default pull-right"
+							   ng-click="editPartition(element.id, partition.id)"
+							   acl-has-project-role="owner">
+
 								<i class="fa fa-fw fa-pencil"></i>
 								<span translate="shared.edit"></span>
 							</a>
 
+							<i class="fa fa-bars partition-handle"></i>
+
 							<strong>{{partition.name}}</strong>
 							
-							<span ng-repeat="group in partition.groups">
-								<span class="label label-info"><i class="fa fa-arrow-circle-right"></i> {{group.name}}</span>
+							<span class="sortable-label-list"
+								  ng-sortable="groupSortOptions"
+								  ng-mouseenter="onSortableMouseEvent('group', true)"
+								  ng-mouseleave="onSortableMouseEvent('group', false)">
+
+								<span ng-repeat="group in partition.groups">
+									<span class="label label-info"><i class="fa fa-arrow-circle-right"></i> {{group.name}}</span>
+								</span>
 							</span>
 							
-							<span ng-repeat="element in partition.elements">
-								<span class="label label-default">{{element.name}}</span>
+							<span class="sortable-label-list"
+								  ng-sortable="elementSortOptions"
+								  ng-mouseenter="onSortableMouseEvent('element', true)"
+								  ng-mouseleave="onSortableMouseEvent('element', false)">
+
+								<span ng-repeat="element in partition.elements">
+									<span class="label label-default">{{element.name}}</span>
+								</span>
 							</span>
 						</li>
 					</ul>
 
-					<a ng-click="moreOptions(element)" class="btn btn-xxs btn-default" style="position: absolute; bottom: 4px; right: 3px" acl-has-project-role="owner">
+					<a ng-click="editPartition(element.id, null)"
+					   class="btn btn-xxs btn-default"
+					   style="position: absolute; bottom: 4px; right: 3px"
+					   acl-has-project-role="owner">
+
 						<i class="fa fa-plus"></i>
 						<span translate="project.add_partition"></span>
 					</a>
@@ -156,53 +183,29 @@
 
 				<!-- variable actions -->
 				<td acl-has-project-role="owner">
-					<a ng-click="upElement($index, $parent.$parent.$index)"
-					   tooltip="{{'project.variable_up'|translate}}"
-					   ng-if="!$first">
-
-						<i class="fa fa-caret-square-o-up"></i>
-					</a>
-					<a ng-click="downElement($index, $parent.$parent.$index)"
-					   tooltip="{{'project.variable_down'|translate}}"
-					   ng-if="!$last">
-
-						<i class="fa fa-caret-square-o-down"></i>
-					</a>
-					<a ng-click="remove(element, form.elements)"
-					   tooltip="{{'project.remove_variable'|translate}}">
-					   <i class="fa fa-times" style="color: red"></i>
+					<a class="btn btn-danger btn-sm" ng-click="remove(element, project.forms[currentFormIndex].elements)">
+						<i class="fa fa-remove"></i>
 					</a>
 				</td>
  			</tr>
-
+		</tbody>
+		<tfoot>
  			<!-- add new variable row --> 
 			<tr acl-has-project-role="owner">
-				<td colspan="4" style="text-align: center">
+				<td colspan="5" style="text-align: center">
 					<a ng-click="newVariable()" class="btn btn-xs btn-default">
 						<i class="fa fa-plus"></i>
 						<span translate="project.add_variable"></span>
 					</a>
 				</td>
 			</tr>
-		</tbody>
+		</tfoot>
 	</table>
-
-	<!-- form actions -->
-	<div acl-has-project-role="owner">
-		<br/>
-		<button ng-click="save()" ng-disabled="dataSourceForm.$invalid || isUnchanged()" class="btn btn-primary">
-			<i class="fa fa-floppy-o"></i>
-			<span translate="shared.save"></span>
-		</button>
-
-		<button ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
-			<i class="fa fa-undo"></i>
-			<span translate="shared.remove_changes"></span>
-		</button>
-
-		<button ng-click="delete()" ng-if="formIndex !== -1" class="btn btn-danger">
-			<i class="fa fa-times"></i>
-			<span translate="shared.delete"></span>
-		</button>
-	</div>
 </form>
+
+<div acl-has-project-role="owner" class="pull-right">
+	<button ng-click="deleteForm()" ng-if="master.forms[currentFormIndex]" class="btn btn-danger">
+		<i class="fa fa-times"></i>
+		<span translate="shared.delete"></span>
+	</button>
+</div>
