--- a/client/dev/partials/projects/specification/basics.html
+++ b/client/dev/partials/projects/specification/basics.html
@@ -6,6 +6,22 @@
 
 <form class="form-horizontal noprint" role="form" name="projectForm" novalidate>
 	<fieldset>
+
+		<div class="form-group" show-errors>
+			<label for="input-country" class="col-sm-2 control-label" translate="shared.country"></label>
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.country">
+				<input id="input-country"
+					   type="text"
+					   class="form-control"
+					   name="country"
+					   ng-model="project.country"
+					   placeholder="{{'project.country_ph'|translate}}"
+					   required />
+				
+				<p class="help-block" ng-if="projectForm.country.$error.required" translate="form.mandatory"></p>
+			</div>
+		</div>
+
 		<div class="form-group" show-errors>
 			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
 			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.name">
@@ -72,18 +88,5 @@
 		</div>
 
  	</fieldset>
-	
-	<div acl-has-project-role="owner">
-		<br/>
 
-		<a ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" ng-click="save()">
-			<i class="fa fa-floppy-o"></i>
-			<span translate="shared.save"></span>
-		</a>
-
-		<a ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
-			<i class="fa fa-undo"></i>
-			<span translate="shared.remove_changes"></span>
-		</a>
-	</div>
 </form>
